# torch-webgpu

./: .env.example  .gitignore  README.md  build.sh  pyproject.toml  run.sh  setup.py  test.sh
csrc/: bindings.cpp  webgpu_allocator.cpp  webgpu_allocator.h  webgpu_context.cpp  webgpu_context.h
csrc/core/: webgpu_allocator.cpp  webgpu_allocator.h  webgpu_context.cpp  webgpu_context.h  webgpu_device_guard.cpp  webgpu_device_guard.h
csrc/ops/: activation_functions.cpp  arithmetic.cpp  basic.cpp  binary.cpp  binary.h  copy.cpp  unary.cpp  unary.h  webgpu_ops.cpp
csrc/utils/: string.h
python/torch_webgpu/: __init__.py
python/torch_webgpu/compiler/: __init__.py  compiler_pass.py  high_ir.py  ir.py  low_ir.py  lowering.py  webgpu_compiler.py
python/torch_webgpu/webgpu/: __init__.py
tests/: playground.py  test_compile_dev.py  test_dev.py  test_reshape.py
tests/ops/: test_add.py  test_gelu.py  test_mul.py  test_reshape.py  test_silu.py
